# qt5-demo02

./: .clang-format  .clangd  .dir-locals.el  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  bld.cmd  fmt.cmd  pkg.cmd  readme.org
include/: components.h  consts.h  logger.h  ui.h  util.h  utilities.h
include/app/: Application.h  MainWindow.h
include/base/: consts.h  logger.h
include/ui/: MainWindow.h
include/ui/jx/: JxHBoxLayout.h  JxLabel.h  JxMainWindow.h  JxPushButton.h  JxVBoxLayout.h  JxWidget.h
include/ui/my/: PrimaryButton.h  SecondaryButton.h  Theme.h
include/ui/zc/: Colors.h  PrimaryButton.h  Theme.h  ThemeColor.h
source/: logger.cpp  main.cpp  util.cpp
source/app/: Application.cpp  MainWindow.cpp
source/base/: logger.cpp  util.cpp
source/ui/: MainWindow.cpp
source/ui/jx/: JxHBoxLayout.cpp  JxLabel.cpp  JxMainWindow.cpp  JxPushButton.cpp  JxVBoxLayout.cpp  JxWidget.cpp
source/ui/my/: PrimaryButton.cpp  SecondaryButton.cpp  Theme.cpp
source/ui/zc/: PrimaryButton.cpp  ThemeColor.cpp
src/: main.cpp  utilities.cpp
src/ui/: MainWindow.cpp
src/ui/jx/: JxHBoxLayout.cpp  JxPushButton.cpp  JxVBoxLayout.cpp
